fixed issue of gap margin not working

--- a/src/components/styles/ResultsCard.scss
+++ b/src/components/styles/ResultsCard.scss
@@ -4,6 +4,7 @@
   box-shadow: 0px 6px 18px rgba(0, 0, 0, 0.45);
   border-radius: 10px;
   width: 75%;
+  margin-bottom: 2rem;
 
   &__img-div {
     width: 10rem;
@@ -22,7 +23,6 @@
     padding: 1rem 1.5rem;
     display: flex;
     flex-direction: column;
-    gap: 0.5rem;
     color: #010b26;
     width: 100%;
   }
@@ -31,6 +31,7 @@
     font-size: 1.75rem;
     font-weight: 600;
     max-width: 90%;
+    margin-bottom: 0.25rem;
   }
 
   &__rating {
@@ -50,12 +51,16 @@
     font-size: 1.2rem;
     opacity: 0.65;
     font-weight: 300;
+    margin-bottom: 1rem;
   }
 
   &__buttons {
+    justify-self: flex-end;
     margin-top: auto;
-    display: flex;
-    gap: 1rem;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(12rem, 1fr));
+    column-gap: 1rem;
+    row-gap: 0.5rem;
 
     & button {
       border: none;
@@ -63,16 +68,14 @@
       background-color: white;
       box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
       border: 1px solid #2196f3;
-      padding: 0.75rem 1.75rem;
+      padding: 0.65rem 0;
       border-radius: 8px;
       font-weight: 600;
-      font-size: 0.9rem;
+      font-size: 0.7rem;
       cursor: pointer;
-      margin-bottom: 0.5rem;
 
       &:hover {
         opacity: 0.7;
-        // text-shadow: 0px 0px 20px #6abcea, 0px 5px 30px #6abcea;
       }
     }
   }
@@ -95,7 +98,6 @@
 
     &__content {
       padding: 0.75rem;
-      gap: 0.2rem;
     }
 
     &__title {
@@ -111,27 +113,6 @@
 
     &__rating {
       font-size: 0.8rem;
-    }
-
-    &__buttons {
-      gap: 0.35rem;
-
-      & button {
-        padding: 0.5rem 0.25rem;
-        font-size: 0.65rem;
-      }
-    }
-  }
-}
-
-@media screen and (max-width: 400px) {
-  .results-card {
-    &__content {
-      padding: 0.75rem 0.5rem 0.2rem 0.5rem;
-    }
-
-    &__buttons button {
-      font-size: 0.6rem;
     }
   }
 }
